# starpoint-sdk-rs

./: Cargo.toml  README.md  build.rs  regenerate.sh
.github/workflows/: starpoint-tests.yml
src/: distance_metric.rs  embedding.rs  id.rs  lib.rs  query_embeddings.rs  reader.rs  tokenizer_type.rs  writer.rs
