[package]
name = "starpoint_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json", "brotli", "gzip"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_valid = "0.16.3"
uuid = { version = "1.6.1", features = ["fast-rng", "serde", "v4"] }
